--- a/index.html
+++ b/index.html
@@ -7,27 +7,13 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Black &mdash; Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title> Where to poop &mdash; We're yelp for toilets</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FreeHTML5.co" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FreeHTML5.co" />
 
-  <!-- 
-	//////////////////////////////////////////////////////
 
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
-
-  	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
 	<meta property="og:url" content=""/>
@@ -38,11 +24,11 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+
 	<link rel="shortcut icon" href="favicon.ico">
 
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -87,8 +73,8 @@
 				<div class="text-inner">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center">
-							<h1 class="to-animate">Black - Template</h1>
-							<h2 class="to-animate">100% Free HTML5 Template. Licensed under <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">Creative Commons Attribution 3.0.</a> <br> Crafted with love by <a href="http://freehtml5.co/" target="_blank" title="Free HTML5 Bootstrap Templates" class="fh5co-link">FREEHTML5.co</a></h2>
+							<h1 class="to-animate">Where to poop</h1>
+							<h2 class="to-animate">We're Yelp for toilets.</h2>
 						</div>
 					</div>
 				</div>
@@ -101,10 +87,10 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 section-heading text-center">
-						<h2 class="to-animate">Black Features</h2>
+						<h2 class="to-animate">Features</h2>
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2 subtext">
-								<h3 class="to-animate">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove. </h3>
+								<h3 class="to-animate">Where to poop offers a plethora of features. </h3>
 							</div>
 						</div>
 					</div>
@@ -120,22 +106,22 @@
 										<div class="core">
 											<i class="icon-cloud-download to-animate-2"></i>
 											<div class="fh5co-post to-animate">
-												<h3>Free Download</h3>
-												<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+												<h3>Cloud Based Live Updates</h3>
+												<p>Whenever someone messes up the toilet seat, we'll let you know so that you don't have to find it out yourself </p>
 											</div>
 										</div>
 										<div class="core">
 											<i class="icon-laptop to-animate-2"></i>
 											<div class="fh5co-post to-animate">
 												<h3>Responsive Layout</h3>
-												<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+												<p>The need to find a toilet doesn't discriminate. It can come whether you're on your laptop, iPad or phone. We're compatible with all of them.</p>
 											</div>
 										</div>
 										<div class="core">
 											<i class="icon-gear to-animate-2"></i>
 											<div class="fh5co-post to-animate">
-												<h3>24/7 Help &amp; Support</h3>
-												<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+												<h3>24/7 Availability&amp; Support</h3>
+												<p>We have toilets all around the city of Philadelphia which are available 24/7 to you. There is no time or place for poop.</p>
 											</div>
 										</div>
 										<div class="core">
@@ -242,10 +228,10 @@
 						</div>
 					</div>
 				</div>
-			</div>	
+			</div>
 		</div>
 	</section>
-	
+
 	<section id="fh5co-pricing" data-section="pricing">
 		<div class="fh5co-pricing">
 			<div class="container">
@@ -334,7 +320,7 @@
 
 			</div>
 		</div>
-	</section>	
+	</section>
 
 	<section id="fh5co-team" data-section="team">
 		<div class="fh5co-team">
@@ -465,7 +451,7 @@
 	</div>
 	<!-- <div id="map" class="fh5co-map"></div> -->
 
-	
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -483,4 +469,3 @@
 
 	</body>
 </html>
-
