--- a/index.html
+++ b/index.html
@@ -182,8 +182,7 @@
 					<div class="col-md-12 text-center">
 						<div class="project-grid to-animate-2" style="background-image:  url(images/project-1.jpg);">
 							<div class="desc">
-								<h3><a href="#">MasCom Template</a></h3>
-								<span>By: Louie D' Great</span>
+								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4967.519805770142!2d-75.1947982534975!3d39.95794738884765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c656cebe36a3%3A0x6b50ac518b4dbd49!2s3675+Market+St%2C+Philadelphia%2C+PA+19104!5e0!3m2!1sen!2sus!4v1557968140604!5m2!1sen!2sus" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
 							</div>
 						</div>
 					</div>
