--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title> Where to poop &mdash; We're yelp for toilets</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FreeHTML5.co" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FreeHTML5.co" />
+
 
 
 	<meta property="og:title" content=""/>
@@ -43,10 +41,7 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
+
 
 	</head>
 	<body>
@@ -124,12 +119,7 @@
 												<p>We have toilets all around the city of Philadelphia which are available 24/7 to you. There is no time or place for poop.</p>
 											</div>
 										</div>
-										<div class="core">
-											<i class="icon-columns to-animate-2"></i>
-											<div class="fh5co-post to-animate">
-												<h3>Lots of Elements</h3>
-												<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-											</div>
+
 										</div>
 									</div>
 								</div>
@@ -141,21 +131,18 @@
 					<div class="container">
 						<div class="row to-animate">
 							<div class="col-md-3 text-center">
-								<span class="fh5co-counter js-counter" data-from="0" data-to="3452" data-speed="5000" data-refresh-interval="50"></span>
-								<span class="fh5co-counter-label">Cups of Coffee</span>
+								<span class="fh5co-counter js-counter" data-from="0" data-to="345" data-speed="5000" data-refresh-interval="50"></span>
+								<span class="fh5co-counter-label">Toilets</span>
 							</div>
 							<div class="col-md-3 text-center">
 								<span class="fh5co-counter js-counter" data-from="0" data-to="234" data-speed="5000" data-refresh-interval="50"></span>
-								<span class="fh5co-counter-label">Client</span>
+								<span class="fh5co-counter-label">Number of Users</span>
 							</div>
 							<div class="col-md-3 text-center">
-								<span class="fh5co-counter js-counter" data-from="0" data-to="6542" data-speed="5000" data-refresh-interval="50"></span>
-								<span class="fh5co-counter-label">Projects</span>
+								<span class="fh5co-counter js-counter" data-from="0" data-to="2600" data-speed="5000" data-refresh-interval="50"></span>
+								<span class="fh5co-counter-label">Potential Users within the University City</span>
 							</div>
-							<div class="col-md-3 text-center">
-								<span class="fh5co-counter js-counter" data-from="0" data-to="8687" data-speed="5000" data-refresh-interval="50"></span>
-								<span class="fh5co-counter-label">Finished Projects</span>
-							</div>
+
 						</div>
 					</div>
 				</div>
@@ -167,149 +154,20 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 section-heading text-center">
-					<h2 class="to-animate">Project Done</h2>
+					<h2 class="to-animate">Try it out yourself</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 subtext to-animate">
-							<h3>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</h3>
+							<h3>Here's our product for you to try out!</h3>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4967.519805770142!2d-75.1947982534975!3d39.95794738884765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c656cebe36a3%3A0x6b50ac518b4dbd49!2s3675+Market+St%2C+Philadelphia%2C+PA+19104!5e0!3m2!1sen!2sus!4v1557968140604!5m2!1sen!2sus" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="fh5co-project">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12 text-center">
-						<div class="project-grid to-animate-2" style="background-image:  url(images/project-1.jpg);">
-							<div class="desc">
-								<h3><a href="#">MasCom Template</a></h3>
-								<span>By: Louie D' Great</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12 text-center">
-						<div class="project-grid to-animate-2" style="background-image:  url(images/project-2.jpg);">
-							<div class="desc">
-								<h3><a href="#">Long Tower</a></h3>
-								<span>By: John Doe</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12 text-center">
-						<div class="project-grid to-animate-2" style="background-image:  url(images/project-3.jpg);">
-							<div class="desc">
-								<h3><a href="#">Flash Theme</a></h3>
-								<span>By: Thomas Jones</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12 text-center">
-						<div class="project-grid to-animate-2" style="background-image:  url(images/project-4.jpg);">
-							<div class="desc">
-								<h3><a href="#">Tattoo</a></h3>
-								<span>By: Louie D' Great</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12 text-center">
-						<div class="project-grid to-animate-2" style="background-image:  url(images/project-5.jpg);">
-							<div class="desc">
-								<h3><a href="#">Train Theme</a></h3>
-								<span>By: Ivan Kim</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12 text-center">
-						<div class="project-grid to-animate-2" style="background-image:  url(images/project-6.jpg);">
-							<div class="desc">
-								<h3><a href="#">Dance Theme</a></h3>
-								<span>By: FreeHTML5.co</span>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+
 	</section>
 
-	<section id="fh5co-pricing" data-section="pricing">
-		<div class="fh5co-pricing">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12 section-heading text-center">
-						<h2 class="to-animate">Plans Built For Every One</h2>
-						<div class="row">
-							<div class="col-md-8 col-md-offset-2 subtext">
-								<h3 class="to-animate">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove. </h3>
-							</div>
-						</div>
-					</div>
-				</div>
 
-				<div class="row">
-					<div class="col-md-3 col-sm-6">
-						<div class="price-box to-animate">
-							<h2 class="pricing-plan">Starter</h2>
-							<div class="price"><sup class="currency">$</sup>7<small>/mo</small></div>
-							<p>Basic customer support for small business</p>
-							<hr>
-							<ul class="pricing-info">
-								<li>10 projects</li>
-								<li>20 Pages</li>
-								<li>20 Emails</li>
-								<li>100 Images</li>
-							</ul>
-							<p><a href="#" class="btn btn-primary">Read More</a></p>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-						<div class="price-box to-animate">
-							<h2 class="pricing-plan">Regular</h2>
-							<div class="price"><sup class="currency">$</sup>19<small>/mo</small></div>
-							<p>Basic customer support for small business</p>
-							<hr>
-							<ul class="pricing-info">
-								<li>15 projects</li>
-								<li>40 Pages</li>
-								<li>40 Emails</li>
-								<li>200 Images</li>
-							</ul>
-							<p><a href="#" class="btn btn-primary">Read More</a></p>
-						</div>
-					</div>
-					<div class="clearfix visible-sm-block"></div>
-					<div class="col-md-3 col-sm-6 to-animate">
-						<div class="price-box popular">
-							<div class="popular-text">Best value</div>
-							<h2 class="pricing-plan">Plus</h2>
-							<div class="price"><sup class="currency">$</sup>79<small>/mo</small></div>
-							<p>Basic customer support for small business</p>
-							<hr>
-							<ul class="pricing-info">
-								<li>Unlimitted projects</li>
-								<li>100 Pages</li>
-								<li>100 Emails</li>
-								<li>700 Images</li>
-							</ul>
-							<p><a href="#" class="btn btn-primary">Read More</a></p>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6">
-						<div class="price-box to-animate">
-							<h2 class="pricing-plan">Enterprise</h2>
-							<div class="price"><sup class="currency">$</sup>125<small>/mo</small></div>
-							<p>Basic customer support for small business</p>
-							<hr>
-							<ul class="pricing-info">
-								<li>Unlimitted projects</li>
-								<li>Unlimitted Pages</li>
-								<li>Unlimitted Emails</li>
-								<li>Unlimitted Images</li>
-							</ul>
-							<p><a href="#" class="btn btn-primary">Read More</a></p>
-						</div>
-					</div>
-				</div>
 
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3 col-md-push-3 to-animate">
@@ -327,7 +185,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 section-heading text-center">
-						<h2 class="to-animate">Our Staff</h2>
+						<h2 class="to-animate">Our Team</h2>
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2 subtext">
 								<h3 class="to-animate">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove. </h3>
@@ -338,15 +196,24 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="team-box text-center to-animate-2">
-							<div class="user"><img class="img-reponsive" src="images/user-1.jpg" alt="Roger Garfield"></div>
-							<h3>Roger Garfield</h3>
-							<span class="position">Co-Founder, Lead Developer</span>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<div class="user"><img class="img-reponsive" src="images/Adeeb.jpg" alt="Roger Garfield"></div>
+							<h3>Adeeb Abbas</h3>
+							<span class="position">Co-Founder and Lead Developer</span>
+							<p></p>
 							<ul class="social-media">
-								<li><a href="#" class="facebook"><i class="icon-facebook"></i></a></li>
+
 								<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
-								<li><a href="#" class="dribbble"><i class="icon-dribbble"></i></a></li>
-								<li><a href="#" class="codepen"><i class="icon-codepen"></i></a></li>
+								<li><a href="#" class="github"><i class="icon-github-alt"></i></a></li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="team-box text-center to-animate-2">
+							<div class="user"><img class="img-reponsive" src="images/Neil.jpeg" alt="Roger Garfield"></div>
+							<h3>Neil Kanakia</h3>
+							<span class="position">Co-founder and Lead Developer</span>
+							<ul class="social-media">
+								<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
 								<li><a href="#" class="github"><i class="icon-github-alt"></i></a></li>
 							</ul>
 						</div>
@@ -354,15 +221,11 @@
 
 					<div class="col-md-4">
 						<div class="team-box text-center to-animate-2">
-							<div class="user"><img class="img-reponsive" src="images/user-2.jpg" alt="Roger Garfield"></div>
-							<h3>Kevin Steve</h3>
-							<span class="position">Co-Founder, Product Designer</span>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<div class="user"><img class="img-reponsive" src="images/Abu.jpeg" ></div>
+							<h3>Abu Zaid Khan<h3>
+							<span class="position">Product Designer</span>
 							<ul class="social-media">
-								<li><a href="#" class="facebook"><i class="icon-facebook"></i></a></li>
 								<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
-								<li><a href="#" class="dribbble"><i class="icon-dribbble"></i></a></li>
-								<li><a href="#" class="codepen"><i class="icon-codepen"></i></a></li>
 								<li><a href="#" class="github"><i class="icon-github-alt"></i></a></li>
 							</ul>
 						</div>
@@ -370,19 +233,17 @@
 
 					<div class="col-md-4">
 						<div class="team-box text-center to-animate-2">
-							<div class="user"><img class="img-reponsive" src="images/user-3.jpg" alt="Roger Garfield"></div>
-							<h3>Ross Standford</h3>
-							<span class="position">Full Stack Developer</span>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<div class="user"><img class="img-reponsive" src="images/Lia.jpeg" alt="Roger Garfield"></div>
+							<h3>Lia Johnson</h3>
+							<span class="position">Developer</span>
 							<ul class="social-media">
-								<li><a href="#" class="facebook"><i class="icon-facebook"></i></a></li>
 								<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
-								<li><a href="#" class="dribbble"><i class="icon-dribbble"></i></a></li>
-								<li><a href="#" class="codepen"><i class="icon-codepen"></i></a></li>
 								<li><a href="#" class="github"><i class="icon-github-alt"></i></a></li>
 							</ul>
 						</div>
 					</div>
+
+
 				</div>
 			</div>
 		</div>
@@ -391,9 +252,8 @@
 	<div class="getting-started getting-started-1">
 		<div class="getting-grid" style="background-image:  url(images/full_image_1.jpg);">
 			<div class="desc text-center">
-				<h2>Getting Started</h2>
-				<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-				<p><a href="#" class="btn btn-primary">Get in touch</a></p>
+				<h2>Here help us get started!</h2>
+				<p><a href="https://docs.google.com/forms/d/e/1FAIpQLScA8GkSD-d-iS5fHeKfhpYvYZcbeF4nLqD4LJVwzeOAil_18A/viewform" class="btn btn-primary">Add a toilet!</a></p>
 			</div>
 		</div>
 	</div>
@@ -403,20 +263,16 @@
 			<div class="row">
 				<div class="col-md-4 to-animate">
 					<h3 class="section-title">About Us</h3>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.</p>
-					<p class="copy-right">&copy; 2015 Twist Free Template. <br>All Rights Reserved. <br>
-						Designed by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a>
-						Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a>
-					</p>
+
 				</div>
 
 				<div class="col-md-4 to-animate">
 					<h3 class="section-title">Our Address</h3>
 					<ul class="contact-info">
-						<li><i class="icon-map-marker"></i>198 West 21th Street, Suite 721 New York NY 10016</li>
-						<li><i class="icon-phone"></i>+ 1235 2355 98</li>
-						<li><i class="icon-envelope"></i><a href="#">info@yoursite.com</a></li>
-						<li><i class="icon-globe2"></i><a href="#">www.yoursite.com</a></li>
+						<li><i class="icon-map-marker"></i>3675 Market Street Philadelphia PA 19104</li>
+						<li><i class="icon-phone"></i>+1 267 206 8442</li>
+						<li><i class="icon-envelope"></i><a href="#">aa4239@drexel.edu</a></li>
+						<li><i class="icon-globe2"></i><a href="#">www.adeeb10abbas.github.io</a></li>
 					</ul>
 					<h3 class="section-title">Connect with Us</h3>
 					<ul class="social-media">
@@ -449,7 +305,7 @@
 			</div>
 		</div>
 	</div>
-	<!-- <div id="map" class="fh5co-map"></div> -->
+	<div id="map" class="fh5co-map"></div>
 
 
 	<!-- jQuery -->
