--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
 					<h2 class="to-animate">Try it out yourself</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 subtext to-animate">
-<<<<<<< HEAD
+
 							<h3>Here's our product for you to try out!</h3>
 							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4967.519805770142!2d-75.1947982534975!3d39.95794738884765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c656cebe36a3%3A0x6b50ac518b4dbd49!2s3675+Market+St%2C+Philadelphia%2C+PA+19104!5e0!3m2!1sen!2sus!4v1557968140604!5m2!1sen!2sus" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
-=======
-							<h3>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</h3>
+
+							<h3>Find a place to relax. Just like that!</h3>
 						</div>
 					</div>
 				</div>
@@ -170,54 +170,10 @@
 		<div class="fh5co-project">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-12 text-center">
-						<div class="project-grid to-animate-2" style="background-image:  url(images/project-1.jpg);">
-							<div class="desc">
-								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4967.519805770142!2d-75.1947982534975!3d39.95794738884765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c656cebe36a3%3A0x6b50ac518b4dbd49!2s3675+Market+St%2C+Philadelphia%2C+PA+19104!5e0!3m2!1sen!2sus!4v1557968140604!5m2!1sen!2sus" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12 text-center">
-						<div class="project-grid to-animate-2" style="background-image:  url(images/project-2.jpg);">
-							<div class="desc">
-								<h3><a href="#">Long Tower</a></h3>
-								<span>By: John Doe</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12 text-center">
-						<div class="project-grid to-animate-2" style="background-image:  url(images/project-3.jpg);">
-							<div class="desc">
-								<h3><a href="#">Flash Theme</a></h3>
-								<span>By: Thomas Jones</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12 text-center">
-						<div class="project-grid to-animate-2" style="background-image:  url(images/project-4.jpg);">
-							<div class="desc">
-								<h3><a href="#">Tattoo</a></h3>
-								<span>By: Louie D' Great</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12 text-center">
-						<div class="project-grid to-animate-2" style="background-image:  url(images/project-5.jpg);">
-							<div class="desc">
-								<h3><a href="#">Train Theme</a></h3>
-								<span>By: Ivan Kim</span>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12 text-center">
-						<div class="project-grid to-animate-2" style="background-image:  url(images/project-6.jpg);">
-							<div class="desc">
-								<h3><a href="#">Dance Theme</a></h3>
-								<span>By: FreeHTML5.co</span>
-							</div>
->>>>>>> 17d94f334e7156cf9cbf41b76b531553af56a3f4
-						</div>
-					</div>
+
+
+
+
 				</div>
 			</div>
 		</div>
@@ -228,8 +184,7 @@
 
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3 col-md-push-3 to-animate">
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean</p>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+
 					</div>
 				</div>
 
@@ -245,7 +200,7 @@
 						<h2 class="to-animate">Our Team</h2>
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2 subtext">
-								<h3 class="to-animate">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove. </h3>
+								<h3 class="to-animate">Our team is made up of incredible </h3>
 							</div>
 						</div>
 					</div>
@@ -320,6 +275,7 @@
 			<div class="row">
 				<div class="col-md-4 to-animate">
 					<h3 class="section-title">About Us</h3>
+					<p>We're a bunch of college freshmen at Drexel University trynna change the world for the better!</p>
 
 				</div>
 
