--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title> Where to poop &mdash; We're yelp for toilets</title>
+	<title> Where to poop! &mdash; We're yelp for toilets</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 
