--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<h2 class="to-animate">Features</h2>
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2 subtext">
-								<h3 class="to-animate">Where to poop offers a plethora of features. </h3>
+								<iframe src="https://www.google.com/maps/d/embed?mid=1Su_NzH0VdfDYLzT7ezfRWQYXpGH5EsbK" width="640" height="480"></iframe>
 							</div>
 						</div>
 					</div>
