--- a/index.html
+++ b/index.html
@@ -151,22 +151,7 @@
 	</section>
 
 	<section id="fh5co-explore" data-section="explore">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 section-heading text-center">
-					<h2 class="to-animate">Try it out yourself</h2>
-					<div class="row">
-						<div class="col-md-8 col-md-offset-2 subtext to-animate">
 
-							<h3>Here's our product for you to try out!</h3>
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4967.519805770142!2d-75.1947982534975!3d39.95794738884765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c656cebe36a3%3A0x6b50ac518b4dbd49!2s3675+Market+St%2C+Philadelphia%2C+PA+19104!5e0!3m2!1sen!2sus!4v1557968140604!5m2!1sen!2sus" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
-
-							<h3>Find a place to relax. Just like that!</h3>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
 		<div class="fh5co-project">
 			<div class="container">
 				<div class="row">
@@ -214,8 +199,8 @@
 							<p></p>
 							<ul class="social-media">
 
-								<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
-								<li><a href="#" class="github"><i class="icon-github-alt"></i></a></li>
+								<li><a href="https://twitter.com/adeeb10abbas" class="twitter"><i class="icon-twitter"></i></a></li>
+								<li><a href="https://github.com/adeeb10abbas/" class="github"><i class="icon-github-alt"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -266,6 +251,8 @@
 			<div class="desc text-center">
 				<h2>Here help us get started!</h2>
 				<p><a href="https://docs.google.com/forms/d/e/1FAIpQLScA8GkSD-d-iS5fHeKfhpYvYZcbeF4nLqD4LJVwzeOAil_18A/viewform" class="btn btn-primary">Add a toilet!</a></p>
+				<p><a href="https://forms.gle/PdndCWDdKqBYG6bQ9" class="btn btn-primary">Add a Review!</a></p>
+
 			</div>
 		</div>
 	</div>
