--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 					<div class="col-md-4">
 						<div class="team-box text-center to-animate-2">
 							<div class="user"><img class="img-reponsive" src="images/Adeeb.jpg" alt="Roger Garfield"></div>
-							<h3>Adeeb Abbas</h3>
+							<h3><a href = "https://linkedin.com/in/adeeb10abbas/">Adeeb Abbas</a></h3>
 							<span class="position">Co-Founder and Lead Developer</span>
 							<p></p>
 							<ul class="social-media">
@@ -207,7 +207,7 @@
 					<div class="col-md-4">
 						<div class="team-box text-center to-animate-2">
 							<div class="user"><img class="img-reponsive" src="images/Neil.jpeg" alt="Roger Garfield"></div>
-							<h3>Neil Kanakia</h3>
+							<h3><a>https://www.linkedin.com/in/neil-k/</a>Neil Kanakia</h3>
 							<span class="position">Co-founder and Lead Developer</span>
 							<ul class="social-media">
 								<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
@@ -219,7 +219,7 @@
 					<div class="col-md-4">
 						<div class="team-box text-center to-animate-2">
 							<div class="user"><img class="img-reponsive" src="images/Abu.jpeg" ></div>
-							<h3>Abu Zaid Khan<h3>
+							<h3><a>https://www.linkedin.com/in/abu-zaid-khan-79a300162/</a>Abu Zaid Khan<h3>
 							<span class="position">Product Designer</span>
 							<ul class="social-media">
 								<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
@@ -231,7 +231,7 @@
 					<div class="col-md-4">
 						<div class="team-box text-center to-animate-2">
 							<div class="user"><img class="img-reponsive" src="images/Lia.jpeg" alt="Roger Garfield"></div>
-							<h3>Lia Johnson</h3>
+							<h3><a href="https://www.linkedin.com/in/liaelisejohnson/"></a>Lia Johnson</h3>
 							<span class="position">Developer</span>
 							<ul class="social-media">
 								<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
