--- a/index.html
+++ b/index.html
@@ -240,6 +240,22 @@
 						</div>
 					</div>
 
+					<div class="col-md-4">
+						<div class="team-box text-center to-animate-2">
+							<div class="user"><img class="img-reponsive" src="images/Maddie.jpeg" alt="Roger Garfield"></div>
+							<h3><a href="https://www.linkedin.com/in/liaelisejohnson/">Maddie</a></h3>
+							<span class="position">Developer</span>
+							<ul class="social-media">
+								<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
+								<li><a href="#" class="github"><i class="icon-github-alt"></i></a></li>
+							</ul>
+						</div>
+					</div>
+
+
+
+
+
 
 				</div>
 			</div>
