--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 					<div class="col-md-4">
 						<div class="team-box text-center to-animate-2">
 							<div class="user"><img class="img-reponsive" src="images/Maddie.jpeg" alt="Roger Garfield"></div>
-							<h3><a href="https://www.linkedin.com/in/madelinebright12/">Maddie</a></h3>
+							<h3><a href="https://www.linkedin.com/in/madelinebright12/">Maddie Bright</a></h3>
 							<span class="position">Developer</span>
 							<ul class="social-media">
 								<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
